add account api swagger
